# pinn_heat

./: README.md  analysis.py  config.py  experiments.py  main.py  model.py  pyproject.toml  visualization.py
pinn_heat/: analysis.py  experiments.py  model.py  run.py  train.py  visualization.py
results/full_fine/: config.json  model_state_dict.pt
results/full_no_data/: config.json  model_state_dict.pt
results/full_no_data_fine/: config.json  model_state_dict.pt
results/full_no_data_very_fine/: config.json  model_state_dict.pt
results/full_no_physics_fine/: config.json  model_state_dict.pt
scripts/: numerical_solution.py  test.py
