[project]
name = "pinn-heat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "scipy>=1.17.1",
    "torch>=2.11.0",
]

[build-system]
requires = ["uv_build>=0.11"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pinn_heat"
module-root = ""

